--- a/custom_components/reolink_dev/translations/nl.json
+++ b/custom_components/reolink_dev/translations/nl.json
@@ -16,6 +16,11 @@
                     "username": "Gebruikersnaam",
                     "password": "Wachtwoord"
                 }
+            },
+            "nvr": {
+                "data": {
+                    "channel": "Kanaal"
+                }
             }
         }
     },
@@ -24,8 +29,7 @@
             "init": {
                 "data": {
                     "stream": "Stream",
-                    "protocol": "Protocol",
-                    "channel": "Kanaal",
+                    "timeout": "Timeout (seconden)",
 					"motion_off_delay": "Bewegingssensor uit vertraging (seconden)"
                 }
             }
